Bug 387300 - conditional expression is constant warnings for XYFourierFilterCurveDock.cpp
Summary: conditional expression is constant warnings for XYFourierFilterCurveDock.cpp
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-25 15:22 UTC by uwestoehr
Modified: 2017-11-25 21:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-25 15:22:28 UTC
I get:

1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYFourierFilterCurveDock.cpp(152): warning C4127: conditional expression is constant
1>  C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYFourierFilterCurveDock.cpp(197): note: see reference to class template instantiation 'QtPrivate::QForeachContainer<QList<XYCurve *>>' being compiled
1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYFourierFilterCurveDock.cpp(222): warning C4127: conditional expression is constant
1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYFourierFilterCurveDock.cpp(278): warning C4127: conditional expression is constant
1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYFourierFilterCurveDock.cpp(300): warning C4127: conditional expression is constant
1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYFourierFilterCurveDock.cpp(326): warning C4127: conditional expression is constant
1>C:\CraftRoot\labplot\src\kdefrontend\dockwidgets\XYFourierFilterCurveDock.cpp(703): warning C4458: declaration of 'data' hides class member
Comment 1 Alexander Semke 2017-11-25 21:51:33 UTC
Git commit 52606208314e2d3d8a1440da1cf9b4baa872a96d by Alexander Semke.
Committed on 25/11/2017 at 21:50.
Pushed by asemke into branch 'master'.

Fixed couple of MSVC warnings in XYFourieFilterCurveDock.cpp
FIXED-IN: 2.5

M  +13   -25   src/kdefrontend/dockwidgets/XYFourierFilterCurveDock.cpp

https://commits.kde.org/labplot/52606208314e2d3d8a1440da1cf9b4baa872a96d