Fixed couple of MSVC warnings in XYFourieFilterCurveDock.cpp

BUG: 387300
FIXED-IN: 2.5